--- a/templates/dashboard/pages/assignTruck/assignTruck.html
+++ b/templates/dashboard/pages/assignTruck/assignTruck.html
@@ -89,7 +89,7 @@
                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
                            &times;
                        </button>
-                       <h4 class="modal-title" id="myModalLabel">Are you sure?</h4>
+                       <h4 class="modal-title" id="myModalLabel">Send Request</h4>
                    </div>
                    <div class="modal-body myModalclass">
                        <!--  If approved, payment is mandatory and once payment is received suitable truck & driver will be assigned to your trip. -->
