--- a/templates/dashboard/pages/payments.html
+++ b/templates/dashboard/pages/payments.html
@@ -1,10 +1,193 @@
 {{{{raw-helper}}}}
 {{{{/raw-helper}}}}
-{{> header}}
+<div class="row">
+    <div class="col-lg-12">
+            <ol class="breadcrumb" style="margin-top: 10px;">
+                <li class="active">
+                        <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <i class="fa {{pageIcon}}"></i> 
+                         {{#if extraOptions.data}}
+                         <BtnCaption>{{extraOptions.data.status}}</BtnCaption>  
+                         {{else}}
+                         <BtnCaption>{{pageSubHeading}}</BtnCaption>  
+                         {{/if}}
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <!-- <a class="dropdown-item" href="javascript:statusChanged('All');">All</a> -->
+                        <a class="dropdown-item" href="javascript:statusChanged('Pending');">Pending</a>
+                        <a class="dropdown-item" href="javascript:statusChanged('Paid');">Paid</a>
+                        <a class="dropdown-item" href="javascript:statusChanged('Received');">Received</a>
+                        <a class="dropdown-item" href="javascript:statusChanged('PendingPayments');">Pending Payments</a>
+                        <a class="dropdown-item" href="javascript:statusChanged('PendingReceivable');">Pending Receivable</a>
+                    </div>
+                        </div>
+                </li>
+            </ol>
+    </div>
+</div>
 <div class='payments'>
     <div class='payments-content'>
 		  NOT YET IMPLEMENTED
     </div>
 </div> 
 {{{{raw-helper}}}}
+<script id="grid-row-template-details" type="text/x-handlebars-template">
+  <div class="container-fluid">
+    <div class="row grid-row">
+        <div class="col-sm-4 grid-row-container">
+            <div class="grid-row-title">Pickup point:</div>                      
+                {{#with pickup}}
+                    {{{exceptOnFirst @index '<hr/>'}}}
+                    <div class="row">     
+                        <div class="grid-row-tile col-sm-12">                
+                            <div>
+                                <span class="grid-row-tile-label">Date & time</span>
+                                <span class="grid-row-tile-text">{{date}}</span>
+                            </div>
+                            <div>
+                                <span class="grid-row-tile-label">Address</span>
+                                <span class="grid-row-tile-text">
+                                    {{#if address.organisation}} {{address.organisation}}, {{/if}}
+                                    {{#if address.city}} {{address.city}}, {{/if}}
+                                    {{#if address.location}}
+                                    {{address.location}}, {{/if}} {{#if address.zip}}{{address.zip}}.{{/if}}
+                                </span>                    
+                            </div>                            
+                        </div>  
+                    </div>
+                    <div class="row"> 
+                         <div class="grid-row-tile col-sm-12">
+                            <span class="grid-row-tile-label">Material(s)</span>
+                            <div>        
+                                {{#with material}} 
+                                    <div>                                        
+                                         <span class="grid-row-tile-text">
+                                            {{name}} 
+                                            {{#if weight}} ({{weight}} {{weightUnit}}) {{/if}}
+                                            {{#if materialType}} - {{materialType}} {{/if}}
+                                            {{#if approximateCost}} - valued at {{currency approximateCost}} {{/if}}
+                                        </span>                   
+                                    </div>                                                                             
+                                {{/with}}
+                            </div>
+                        </div> 
+                    </div>                    
+                {{/with}}                                   
+        </div>   
+        <div class="col-sm-4 grid-row-container">
+            <div class="grid-row-title">Drop point:</div>                      
+                {{#with drop}}
+                    <div class="row">     
+                        <div class="grid-row-tile col-sm-12">                
+                            {{#if date}}
+                            <div>
+                                <span class="grid-row-tile-label">Date & time</span>
+                                <span class="grid-row-tile-text">{{date}}</span>
+                            </div>
+                            {{/if}}
+                            <div>
+                                <span class="grid-row-tile-label">Address</span>
+                                <span class="grid-row-tile-text">
+                                    {{#if address.organisation}} {{address.organisation}}, {{/if}}
+                                    {{#if address.city}} {{address.city}}, {{/if}}
+                                    {{#if address.location}}
+                                    {{address.location}}, {{/if}} {{#if address.zip}}{{address.zip}}.{{/if}}
+                                </span>                    
+                            </div>                            
+                        </div>  
+                    </div>
+                    {{#if itemsToDrop}}
+                    <div class="row"> 
+                         <div class="grid-row-tile col-sm-12">
+                            <div>        
+                                <span class="grid-row-tile-label">Items to drop</span>
+                                <span class="grid-row-tile-text">
+                                    {{#if itemsToDrop}}
+                                    {{commaSeperatedArray itemsToDrop}}                                    
+                                    {{/if}}
+                                </span>
+                            </div>
+                        </div> 
+                    </div>           
+                    {{/if}}                          
+                {{/with}}                                   
+        </div>  
+        <div class="col-sm-4 grid-row-container">
+            <div class="grid-row-title">Vehicle Requirements:</div> 
+            <div class="row">     
+                <div class="grid-row-tile col-sm-12">                
+                    <div>
+                        <span class="grid-row-tile-text">
+                            {{#with vehicleRequirements}}
+                                <div>
+                                    {{vehicleType}}
+                                    {{#if requiredCapacity}}
+                                         with capacity {{requiredCapacity}} {{capacityUnit}} 
+                                    {{/if}}
+                                    {{#if minRating}} with rating {{minRating}} {{/if}}
+                                </div>
+                            {{/with}}
+                        </span>
+                    </div>                                           
+                </div>  
+            </div>
+            {{#if totalWeight}}
+            <div class="grid-row-title">Total Weight:</div> 
+             <div class="row">     
+                <div class="grid-row-tile col-sm-12">                
+                    <div>
+                        <span class="grid-row-tile-text">  
+                            {{totalWeight}} {{totalWeightUnit}}
+                        </span>
+                    </div>                                           
+                </div>  
+            </div>
+            {{/if}}
+            {{#if truckdetails}}            
+            <div class="grid-row-title">Truckdetails:</div>  
+            <div class="row">     
+                <div class="grid-row-tile col-sm-12">                
+                    <div>
+                        <span class="grid-row-tile-text">
+                           {{plateNumber}} {{truckType}}
+                        </span>
+                    </div>                                           
+                </div>  
+            </div>
+        {{/if}} 
+            {{#if quotes}}
+                <div class="grid-row-title">Quote:</div> 
+                <div class="row">     
+                    <div class="grid-row-tile col-sm-12">                
+                        <div>
+                            <span class="grid-row-tile-text">
+                                {{quotes.cost}} 
+                            </span>
+                        </div>                                           
+                    </div>  
+                </div>
+            {{/if}}
+        </div>     
+    </div>
+  </div>
+</script>
+<script id="grid-row-options-template" type="text/x-handlebars-template">
+  <div class="container-fluid">
+    <div class="row grid-row">       
+        <div class="col-sm-12">
+            <div class="pull-right">
+                {{#each (getPaymentGridOptions status _id)}}     
+                <button type="button" class="btn btn-default btn-primary {{id}}" _id="{{_id}}">{{option}}</button>
+                {{/each}}
+            </div>
+        </div>       
+    </div>
+  </div>
+</script>
+{{{{/raw-helper}}}}
+{{{{raw-helper}}}}
+<script type="text/javascript">
+    console.log("template data",UTILS.getCurrentTemplateData()),$(document).ready(function(){var e=UTILS.getCurrentTemplateData();new GRID_HELPER.GRID(".payments-content",{gridData:e,gridId:"gridPayments",rowConfig:{template:"grid-row-template-details",optionsTemplate:"grid-row-options-template",optionsPostRender:function(e,n){$(e).find(".log-payment").click(function(){}),$(e).find(".cancel").click(function(){}),$(e).find(".comment").click(function(){}),$(e).find(".mark-received").click(function(){})}}});statusChanged=function(e){var n={data:{status:e}};MENU_HELPER.menuClick("payments","payments",n)}}),Handlebars.registerHelper("getPaymentGridOptions",function(e,n){switch(e){case"Paid":return[{option:"Log Payment",_id:n,id:"log-payment"},{option:"Cancel",_id:n,id:"cancel"}];case"PendingPayments":return[{option:"Log Payment",_id:n,id:"log-payment"},{option:"Cancel",_id:n,id:"cancel"}];case"PendingReceivable":return[{option:"Comments",_id:n,id:"comments"},{option:"Mark Received",_id:n,id:"mark-received"},{option:"Cancel",_id:n,id:"cancel"}];case"Received":return[]}});
+</script>
 {{{{/raw-helper}}}}
