--- a/less/dashboard/style.less
+++ b/less/dashboard/style.less
@@ -562,3 +562,8 @@ ul.alert-dropdown {
     // font-weight: 300;
 }
 
+#top-alert {
+    vertical-align:middle;
+    top: 0;
+    z-index: 99999;
+  }
