--- a/templates/dashboard/pages/addTripMin/addTripMin.html
+++ b/templates/dashboard/pages/addTripMin/addTripMin.html
@@ -1,5 +1,7 @@
 {{> header}}
 <div class='new-trips'>
+    <div class="container-fluid" id="loadPrevious">
+      </div>
     <div class='new-trips-content'>
     </div>
 </div> 
