--- a/templates/dashboard/pages/manageTrucks.html
+++ b/templates/dashboard/pages/manageTrucks.html
@@ -70,7 +70,7 @@ dt{display:block;float:left;text-align:left}dt:after{content:':'}.top-buffer{mar
                 {{/if}}
                 {{#if nextFreeDate}}
                 <div class="col-md-4">
-                    <dt>NextFreeDate </dt>&emsp; {{nextFreeDate}}
+                    <dt>NextFreeDate </dt>&emsp; {{formatDate nextFreeDate}}
                 </div> 
                 {{/if}}
              </div>
