--- a/templates/dashboard/pages/manageTrucks/manageTrucks.html
+++ b/templates/dashboard/pages/manageTrucks/manageTrucks.html
@@ -79,7 +79,7 @@
                 {{/if}}
                 {{#if nextFreeDate}}
                 <div class="col-md-4">
-                    <dt>NextFreeDate </dt>&emsp; {{nextFreeDate}}
+                    <dt>NextFreeDate </dt>&emsp; {{formatDate nextFreeDate}}
                 </div> 
                 {{/if}}
              </div>
