--- a/templates/dashboard/pages/payments/payments.html
+++ b/templates/dashboard/pages/payments/payments.html
@@ -47,7 +47,7 @@
                         <div class="grid-row-tile col-sm-12">                
                             <div>
                                 <span class="grid-row-tile-label">Date & time</span>
-                                <span class="grid-row-tile-text">{{date}}</span>
+                                <span class="grid-row-tile-text">{{formatDate date}}</span>
                             </div>
                             <div>
                                 <span class="grid-row-tile-label">Address</span>
@@ -87,7 +87,7 @@
                             {{#if date}}
                             <div>
                                 <span class="grid-row-tile-label">Date & time</span>
-                                <span class="grid-row-tile-text">{{date}}</span>
+                                <span class="grid-row-tile-text">{{formatDate date}}</span>
                             </div>
                             {{/if}}
                             <div>
