--- a/templates/dashboard/partials/navbar.html
+++ b/templates/dashboard/partials/navbar.html
@@ -1,7 +1,7 @@
-<!-- Navigation -->
-        <nav class="navbar navbar-dark bg-inverse navbar-fixed-top">
+<!-- Navigation -->  
+<nav class="navbar navbar-dark bg-inverse navbar-fixed-top">
             <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
+            <div class="navbar-header">>
                 <button class="navbar-toggler hidden-sm-up pull-sm-right" type="button" data-toggle="collapse" data-target=".navbar-ex1-collapse">
                     &#9776;
                 </button>
@@ -9,4 +9,4 @@
             </div>
             {{> topmenu}}
             {{> sidemenu}}            
-        </nav>
+</nav>
