--- a/templates/dashboard/pages/addComments/addComments.html
+++ b/templates/dashboard/pages/addComments/addComments.html
@@ -21,7 +21,7 @@
             </div>
             <div class="media-body">
                 <h4 class="media-heading"> <i class="fa fa-user"></i> {{commentedby}} <br>
-                     <i class="fa fa-clock-o"></i>  {{date}} 
+                     <i class="fa fa-clock-o"></i>  {{formatDate date}} 
                 </h4>
                 <p>{{comment}}.</p>
                 
