--- a/templates/dashboard/pages/cancelTrip.html
+++ b/templates/dashboard/pages/cancelTrip.html
@@ -1,4 +1,7 @@
 {{{{raw-helper}}}}
+<style>
+.alpaca-field-object{border:0 solid #eee;border-radius:0;padding:10px}
+</style>
 {{{{/raw-helper}}}}
 {{> header}}
 <div class='cancel-trip'>
@@ -7,6 +10,6 @@
 </div> 
 {{{{raw-helper}}}}
 <script type="text/javascript">
-    console.log("template data",UTILS.getCurrentTemplateData()),$(document).ready(function(){var e=UTILS.getCurrentTemplateData();e.data.status="Cancelled",FORM_HELPER.draw(".cancel-trip-content",e,{bindings:{status:"column-1",comments:"column-1"},schemaOverride:{fields:{comments:{title:"Reason:",items:{properties:{}}}}},optionsOverride:{fields:{comments:{type:"textarea"},status:{"default":"Cancelled",disabled:!0}}},postUrl:"trips/service/cancelTrip",callbacks:{beforeSubmit:function(e){console.log(e)},afterSubmit:function(){MENU_HELPER.menuClick("manageTrip","manageTrip")}}})});
+    console.log("template data",UTILS.getCurrentTemplateData()),$(document).ready(function(){var e=UTILS.getCurrentTemplateData();e.data.status="Cancelled",FORM_HELPER.draw(".cancel-trip-content",e,{bindings:{status:"column-1",comments:"column-1"},schemaOverride:{fields:{comments:{title:"",items:{properties:{}}}}},optionsOverride:{fields:{comments:{toolbarSticky:!1,items:{fields:{comment:{title:"Comment:",type:"textarea"},date:{hidden:!0,"default":new Date},commentedby:{type:"text",hidden:!0,"default":API_HELPER.getLoggedInUser().username}}}},status:{"default":"Cancelled",disabled:!0}}},postUrl:"trips/service/cancelTrip",callbacks:{beforeSubmit:function(e){console.log(e)},afterSubmit:function(){MENU_HELPER.menuClick("manageTrip","manageTrip")}}})});
 </script>
 {{{{/raw-helper}}}}
