--- a/templates/dashboard/pages/manageDrivers/manageDrivers.html
+++ b/templates/dashboard/pages/manageDrivers/manageDrivers.html
@@ -91,7 +91,7 @@
                                                       {{#if licenseExpiryDate}}
                                                       <tr>
                                                           <td>License Expiry:</td>
-                                                          <td>{{licenseExpiryDate}}</td>
+                                                          <td>{{formatDate licenseExpiryDate}}</td>
                                                       </tr>
                                                       {{/if}}
 
