--- a/templates/dashboard/pages/searchTrips/searchTrips.html
+++ b/templates/dashboard/pages/searchTrips/searchTrips.html
@@ -15,7 +15,7 @@
                         <div class="grid-row-tile col-sm-12">                
                             <div>
                                 <span class="grid-row-tile-label">Date & time</span>
-                                <span class="grid-row-tile-text">{{date}}</span>
+                                <span class="grid-row-tile-text">{{formatDate date}}</span>
                             </div>
                             <div>
                                 <span class="grid-row-tile-label">Address</span>
@@ -67,7 +67,7 @@
                         <div class="grid-row-tile col-sm-12">                
                             <div>
                                 <span class="grid-row-tile-label">Date & time</span>
-                                <span class="grid-row-tile-text">{{date}}</span>
+                                <span class="grid-row-tile-text">{{formatDate date}}</span>
                             </div>
                             <div>
                                 <span class="grid-row-tile-label">Address</span>
@@ -192,7 +192,7 @@
         <div class="col-sm-12 grid-row-container">
             <span class="grid-row-title">Pickup</span> at 
             {{#each pickup}}
-                {{address.street}}, {{address.city}} on {{date}}
+                {{address.street}}, {{address.city}} on {{formatDate date}}
                 {{{exceptOnFirst @index ','}}}
                 (<span class="grid-row-title">Contact:</span>             
                 {{#each contact}} 
@@ -208,7 +208,7 @@
             <br/>
             <span class="grid-row-title">Drop</span> at 
             {{#each drop}}
-                {{address.city}} on {{date}}
+                {{address.city}} on {{formatDate date}}
                 {{{exceptOnFirst @index ','}}}
                 (<span class="grid-row-title">Contact:</span> 
                  {{#each contact}}                  
