--- a/templates/dashboard/pages/viewTripDetails.html
+++ b/templates/dashboard/pages/viewTripDetails.html
@@ -16,7 +16,7 @@
                             <div class="grid-row-tile col-sm-12">                
                                 <div>
                                     <span class="grid-row-tile-label">Date & time</span>
-                                    <span class="grid-row-tile-text">{{date}}</span>
+                                    <span class="grid-row-tile-text">{{formatDate date}}</span>
                                 </div>
                                 <div>
                                     <span class="grid-row-tile-label">Address</span>
@@ -72,7 +72,7 @@
                                 {{#if date}}
                                 <div>
                                     <span class="grid-row-tile-label">Date & time</span>
-                                    <span class="grid-row-tile-text">{{date}}</span>
+                                    <span class="grid-row-tile-text">{{formatDate date}}</span>
                                 </div>
                                 {{/if}}
                                 <div>
