--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -22,7 +22,7 @@
       </div>
 </div>
 
-{{> footer}}
+<!-- {{> footer}} -->
 
 <!-- Theme JavaScript -->
 <script async src="js/dashboard/dashboard.min.js"></script>
