--- a/templates/dashboard/pages/addTripMin/addTripMin.html
+++ b/templates/dashboard/pages/addTripMin/addTripMin.html
@@ -1,9 +1,11 @@
 {{> header}}
 <div class='new-trips'>
     <div class="container-fluid" id="loadPrevious">
+        Auto fill from Previous Trip? &nbsp; <input type="checkbox" name="autofill" value="autofill">
       </div>
-    <div class='new-trips-content'>
+    <div class='new-trips-content' id="newtripscontainer">
     </div>
+    <a href="url">More details</a>
 </div> 
 
 {{{{raw-helper}}}}
