--- a/templates/dashboard/pages/manageTrucks/manageTrucks.html
+++ b/templates/dashboard/pages/manageTrucks/manageTrucks.html
@@ -12,6 +12,7 @@
                        {{/if}}
                   </button>
                   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <a class="dropdown-item" href="javascript:statusChanged('All');">All</a>
                       <a class="dropdown-item" href="javascript:statusChanged('Running');">Running</a>
                       <a class="dropdown-item" href="javascript:statusChanged('Free');">Free Trucks</a>
                       <a class="dropdown-item" href="javascript:statusChanged('Deactivated');">Deactivated</a>      
