--- a/templates/dashboard/pages/manageDrivers/manageDrivers.html
+++ b/templates/dashboard/pages/manageDrivers/manageDrivers.html
@@ -12,6 +12,7 @@
                          {{/if}}
                     </button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <a class="dropdown-item" href="javascript:statusChanged('All');">All</a>
                         <a class="dropdown-item" href="javascript:statusChanged('Assigned');">Assigned</a>
                         <a class="dropdown-item" href="javascript:statusChanged('Free');">Free Drivers</a>
                         <a class="dropdown-item" href="javascript:statusChanged('Deactivated');">Deactivated</a>      
