--- a/templates/dashboard/pages/manageTrip/manageTrip.html
+++ b/templates/dashboard/pages/manageTrip/manageTrip.html
@@ -32,13 +32,13 @@
                     </li>
                 </ol>
 
-                <div class="container">
+               <!--  <div class="container">
                     <ol class="breadcrumb breadcrumb-arrow">
                         <li><a href="#">Home</a></li>
                         <li><a href="#">Library</a></li>
                         <li class="active"><span>Data</span></li>
                     </ol>
-                </div>
+                </div> -->
             
         </div>
     </div>
