--- a/templates/dashboard/pages/tripPayment/tripPayment.html
+++ b/templates/dashboard/pages/tripPayment/tripPayment.html
@@ -11,13 +11,12 @@
 {{{{raw-helper}}}}
 <script id="cost" type="text/x-handlebars-template">
     <div>
-    <p class="h5">Total cost of the trip is <mark>{{data}}</mark> Rs, this 
-        can be paid in parts (advance or full).<p>
+    <p class="h5">Total cost of the trip is <mark>{{data}}</mark> Rs.<p>
 
-  Account No:  XXXXXXXXX787,<br>
-  Bank Name:   State Bank of India,<br>
-  Branch:      Vijayawada.<br>
-  IFSC:        SBI004562 <br>
+  <strong>Account No:</strong>  XXXXXXXXX787,<br>
+  <strong>Bank Name:</strong>  State Bank of India,<br>
+  <strong>Branch:</strong>      Vijayawada.<br>
+  <strong>IFSC: </strong>       SBI004562 <br>
         </div>
 </script>
 <script id="tripPayment" type="text/x-handlebars-template">
