--- a/templates/main/partials/login.html
+++ b/templates/main/partials/login.html
@@ -13,4 +13,8 @@
     <div class="col-xs-6 form-group pull-right">     
         <input type="submit" name="login-submit" id="login-submit" tabindex="4" class="form-control btn btn-login" value="Log In">
     </div>
+
+    <div id="alermessage" class="alert alert-danger col-xs-12" style="display: none" role="alert">
+            <strong>Oh snap!</strong> <a href="#" class="alert-link">Failed to login</a> check credentials and try submitting again.
+    </div> 
 </div>
